apps/bithotel/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bithotel
  namespace: bithotel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bithotel
  template:
    metadata:
      labels:
        app: bithotel
    spec:
      containers:
        - name: apache
          image: httpd:2.4
          ports:
            - containerPort: 80
