apps/bithotel/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bithotel
  namespace: bithotel
spec:
  selector:
    app: bithotel
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
